{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 792,
  "lineage": "23a90a88-3fdd-8125-cbf6-8811e68851ca",
  "resources": [
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw-ip",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf62d0b8927d51a6",
            "arn": "arn:aws:ec2:us-east-1:309238126949:elastic-ip/eipalloc-0cf62d0b8927d51a6",
            "association_id": "eipassoc-0425d88a2343cc773",
            "domain": "vpc",
            "id": "eipalloc-0cf62d0b8927d51a6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-086ad439ea316a69e",
            "private_dns": "ip-10-0-0-173.ec2.internal",
            "private_ip": "10.0.0.173",
            "public_dns": "ec2-100-28-243-197.compute-1.amazonaws.com",
            "public_ip": "100.28.243.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "smartinvest-vpc-eip"
            },
            "tags_all": {
              "Name": "smartinvest-vpc-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "smartinvest-fe",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0427090fd1714168b",
            "arn": "arn:aws:ec2:us-east-1:309238126949:instance/i-09c24f1c147f69bf6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_instance_profile",
            "id": "i-09c24f1c147f69bf6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0021eee94c63a87",
            "private_dns": "ip-10-0-0-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.109",
            "public_dns": "ec2-44-211-89-161.compute-1.amazonaws.com",
            "public_ip": "44.211.89.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0225ce28abca32aee",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e948d74cd5d46d1",
            "tags": {
              "Name": "smartinvest-fe"
            },
            "tags_all": {
              "Name": "smartinvest-fe"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ac0c9d08ea85acc"
            ]
          },
          "dependencies": [
            "module.aws-resources.aws_iam_instance_profile.ec2_instance_profile",
            "module.aws-resources.aws_security_group.smartinvest-ec2-fe-sg",
            "module.aws-resources.aws_subnet.smartinvest-public-subnet-1a",
            "module.aws-resources.aws_vpc.main",
            "module.aws-resources.data.aws_iam_role.LabRole"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "smartinvest-ig",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309238126949:internet-gateway/igw-0bfd598899aeffd93",
            "id": "igw-0bfd598899aeffd93",
            "owner_id": "309238126949",
            "tags": {
              "Name": "smartinvest-ig"
            },
            "tags_all": {
              "Name": "smartinvest-ig"
            },
            "vpc_id": "vpc-0dfe19a8ae316e8c2"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "smartinvest-natgw",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf62d0b8927d51a6",
            "association_id": "eipassoc-0425d88a2343cc773",
            "connectivity_type": "public",
            "id": "nat-06de1052f88bd8d4a",
            "network_interface_id": "eni-086ad439ea316a69e",
            "private_ip": "10.0.0.173",
            "public_ip": "100.28.243.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e948d74cd5d46d1",
            "tags": {
              "Name": "smartinvest-natgw"
            },
            "tags_all": {
              "Name": "smartinvest-natgw"
            }
          },
          "dependencies": [
            "module.aws-resources.aws_eip.natgw-ip",
            "module.aws-resources.aws_internet_gateway.smartinvest-ig",
            "module.aws-resources.aws_subnet.smartinvest-public-subnet-1a",
            "module.aws-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smartinvest-ec2-fe-sg",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309238126949:security-group/sg-05ac0c9d08ea85acc",
            "description": "Allow HTTPs traffic to EC2 front end",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ac0c9d08ea85acc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "smartinvest-ec2-fe",
            "name_prefix": "",
            "owner_id": "309238126949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "smartinvest-ec2-fe"
            },
            "tags_all": {
              "Name": "smartinvest-ec2-fe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfe19a8ae316e8c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smartinvest-rds-sg",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309238126949:security-group/sg-0979d02e7908efef1",
            "description": "Allow Database request traffic to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0979d02e7908efef1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "smartinvest-rds-sg",
            "name_prefix": "",
            "owner_id": "309238126949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "smartinvest-rds-sg"
            },
            "tags_all": {
              "Name": "smartinvest-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfe19a8ae316e8c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "smartinvest-private-subnet-1a",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309238126949:subnet/subnet-090ef72b5aec150bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ef72b5aec150bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309238126949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartinvest-private-subnet-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "smartinvest-private-subnet-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dfe19a8ae316e8c2"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "smartinvest-private-subnet-1b",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309238126949:subnet/subnet-09d5fa0816e64064b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d5fa0816e64064b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309238126949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartinvest-private-subnet-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "smartinvest-private-subnet-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dfe19a8ae316e8c2"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "smartinvest-public-subnet-1a",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309238126949:subnet/subnet-02e948d74cd5d46d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e948d74cd5d46d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309238126949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "smartinvest-public-subnet-1a"
            },
            "tags_all": {
              "Name": "smartinvest-public-subnet-1a"
            },
            "vpc_id": "vpc-0dfe19a8ae316e8c2"
          },
          "dependencies": [
            "module.aws-resources.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws-resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.aws-resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309238126949:vpc/vpc-0dfe19a8ae316e8c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1df22095ea6277a",
            "default_route_table_id": "rtb-0900a4ee85c69031b",
            "default_security_group_id": "sg-03015693761ff2edc",
            "dhcp_options_id": "dopt-09eeb802b90b31e9f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dfe19a8ae316e8c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0900a4ee85c69031b",
            "owner_id": "309238126949",
            "tags": {
              "Name": "smartinvest-vpc"
            },
            "tags_all": {
              "Name": "smartinvest-vpc"
            }
          }
        }
      ]
    }
  ]
}